--- a/pg1.css
+++ b/pg1.css
@@ -1,4 +1,4 @@
-HomePage CSS
+
 *{
     margin:0;
     padding:0;
@@ -22,6 +22,11 @@ header{
     background:white;
     padding:20px 0;
     box-shadow:0 2px 10px rgba(0,0,0,0.05);
+    .dm-logo {
+    width: 60px;   /* Change the size as you want */
+    height: auto;  /* Keeps the aspect ratio */
+}
+
 }
 
 .nav{
