--- a/pg5.css
+++ b/pg5.css
@@ -19,6 +19,10 @@ body {
     padding: 15px 60px;
     background: #fff;
     border-bottom: 1px solid #e5e5e5;
+    .dm-logo {
+    width: 60px;   /* Change the size as you want */
+    height: auto;  /* Keeps the aspect ratio */
+}
 }
 
 .navbar nav a {
